# drt

./: .exrc  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  system.config
project/: my.config
src/: drt.rs  eval.rs  exec.rs  lib.rs  main.rs
src/drt/: cmd.rs  diff.rs  err.rs  fs.rs  mod.rs  properties.rs  template.rs  userinput.rs
src/dryrun/: cmd.rs  diff.rs  err.rs  filter.rs  fs.rs  template.rs
src/met/: cmd.rs  diff.rs  err.rs  filter.rs  fs.rs  mod.rs  template.rs
template/: test.config
tests/: integration_test.rs  test1.rs
