[package]
name = "drt"
version = "0.3.0"
authors = ["Sean McEligot <sean.mceligot@gmail.com>"]

[dependencies]
regex = "*"
getopts = "*"
glob = "*"
tempfile = "*"
rand = "*"
log = "0.4"
simple_logger = "1.6.0"
ansi_term = "0.12"

[lib]
name = "drt"
path = "src/lib.rs"

[[bin]]
name = "drt"
path = "src/main.rs"

