[package]
name = "met"
description = "Meticulous configuration"
version = "0.6.0"
authors = ["Sean McEligot <sean.mceligot@gmail.com>"]

[dependencies]
regex = "*"
getopts = "*"
glob = "*"
tempfile = "*"
rand = "*"
log = "0.4"
simple_logger = "1.6.0"
ansi_term = "0.12"
which = "*"
thiserror = "*"
libc="*"
config = "*"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.0"

[lib]
name = "met"
path = "src/lib.rs"

[[bin]]
name = "met"
path = "src/main.rs"

