[package]
name = "dryrun"
description = "Dry Run: Print what command would be run. Only run in live or ask mode"
version = "0.7.0"
authors = ["Sean McEligot <sean.mceligot@gmail.com>"]

[dependencies]
regex = "*"
getopts = "*"
glob = "*"
tempfile = "*"
rand = "*"
log = "0.4"
simple_logger = "1.6.0"
ansi_term = "0.12"
which = "*"
thiserror = "*"
libc="*"
config = "*"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.0"

[lib]
name = "dryrun"
path = "src/lib.rs"

[[bin]]
name = "dryrun"
path = "src/main.rs"

